--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,11 @@
+html {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
 header {
   display: inline-block;
   background-color: white;
-  padding: 16px 0px 16px 0px;
+  /* padding: 16px 0px 16px 0px; */
 }
 #schoolname {
   font-size: 32px;
@@ -13,7 +17,10 @@ header {
   color: rgb(41, 40, 40);
 }
 nav {
+  padding-top: 28px;
   font-size: 20px;
+  justify-content: right;
+  margin-left: auto;
 }
 ul {
   list-style-type: none;
@@ -25,29 +32,54 @@ li {
 }
 li a {
   /* display: block; */
-  text-align: center;
+  /* text-align: right; */
   padding: 16px;
+
+  color: darkslategray;
+}
+a {
   text-decoration: none;
 }
 li a:last-child {
   margin-right: 24px;
 }
-main {
+.banner-box {
   background-color: lightgray;
+}
+section {
   padding: 32px 24px;
 }
+/* .section2 {
+  background-color: aqua;
+} */
 .flex {
   display: flex;
 }
-.banner {
+.large-image-box {
   width: 60%;
 }
 .rightbox {
   width: 40%;
+  margin-left: 24px;
 }
 .textbox {
   margin-left: 24px;
   color: rgb(70, 70, 70);
+}
+.smallbox-image {
+  width: 35%;
+  padding: 0px 16px 16px 16px;
+  height: auto;
+}
+.textright {
+  width: 65%;
+}
+img {
+  max-width: 100%;
+}
+h4,
+.info-heading {
+  font-weight: 900;
 }
 button {
   background-color: rgb(70, 70, 70);
@@ -56,4 +88,17 @@ button {
   border: none;
   padding-top: 8px;
   padding-bottom: 8px;
+}
+.section3 {
+  background-color: lightgray;
+}
+
+.thirdflexbox {
+  flex-wrap: wrap;
+  width: 30%;
+}
+.section-header {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  text-align: center;
 }
